--- a/miniprogram/components/extend_btn/index.wxss
+++ b/miniprogram/components/extend_btn/index.wxss
@@ -8,6 +8,7 @@
   justify-content: center;
   background-color: #284a7e;
   padding: 10rpx 5rpx 10rpx 5rpx;
+  box-shadow: 4rpx 2rpx 5rpx 1rpx #d8d8d8;
 }
 
 .btnBgImg{
@@ -27,11 +28,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 5rpx;
 }
 
 .btnIcon{
-  width: 81rpx;
-  height: 81rpx;
+  width: 64rpx;
+  height: 64rpx;
   margin: 5rpx;
 }
 
