--- a/miniprogram/components/item_bar/index.wxss
+++ b/miniprogram/components/item_bar/index.wxss
@@ -4,34 +4,39 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 90%;
-  height: 100%;
+  /* width: 90%; */
+  padding: 10rpx 20rpx;
+  /* height: 100%; */
   background-color: #ffffff;
-  margin: 10rpx 10rpx 10rpx 20rpx;
+  /* margin: 10rpx 10rpx 10rpx 20rpx; */
 }
 
 .order_imgContainer {
   display: flex;
+  margin: 10rpx 20rpx;
 }
 
 .order_img {
   width: 106rpx;
   height: 106rpx;
   padding: 2rpx;
+  border-radius: 12rpx;
 }
 
 .order_texts {
   display: flex;
+  width: 320rpx;
   flex-direction: column;
   margin: 10rpx 20rpx 10rpx 10rpx;
 }
 
 .order_title {
-  font-size: 28rpx;
+  font-size: 32rpx;
+  font-weight: 500;
   margin: 2rpx 0rpx 2rpx 2rpx;
 }
 
 .order_details {
   font-size: 20rpx;
-  margin: 2rpx 0rpx 2rpx 2rpx;
+  margin: 4rpx 0rpx 2rpx 2rpx;
 }
