--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -3,6 +3,7 @@
 page {
   background-color: #e4e4e4;
   justify-content: center;
+  overflow: hidden;
 }
 
 .mainBody {
@@ -43,18 +44,38 @@ page {
   margin: 20rpx 10rpx;
   border-radius: 20rpx;
   justify-content: center;
+  align-items: center;
   height: 200rpx;
   flex-wrap: nowrap;
   display: flex;
 }
 
 .recommendationOrdersArea {
-  width: 700rpx;
+  display: flex;
+  flex-wrap: wrap;
+  width: 720rpx;
   background-color: #f5f5f5;
   margin: 20rpx 10rpx;
   border-radius: 20rpx;
   justify-content: center;
   height: 680rpx;
+}
+
+.itemCardScrollContainer {
+  height: 660rpx;
+  width: 700rpx;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-between;
+  flex-direction: row; */
+  white-space: normal;
+}
+
+.itemCardScrollContainer .itemCardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 700rpx;
+  flex-direction: row;
 }
 
 
@@ -67,60 +88,71 @@ page {
 }
 
 .catagloriesBarContainer {
-  width: 680rpx;
+  width: 620rpx;
+  /* background-color: #e4e4e4; */
+  border-radius: 100rpx;
   height: fit-content;
-  padding: 5rpx;
-  margin: 5rpx;
+  padding: 5rpx 10rpx 5rpx 10rpx;
+  margin: 10rpx 5rpx;
   display: flex;
   flex-wrap: nowrap;
+  align-items: center;
+  align-content: center;
   justify-content: space-between;
+  /* box-shadow: 4rpx 2rpx 5rpx 1rpx #d8d8d8; */
 }
 
 .searchArea .searchBar {}
 
 .catagloriesBarContainer .cataglories {
-  height: 56rpx;
+  height: 48rpx;
   width: 128rpx;
   /* border: black 2rpx solid; */
   border-radius: 60rpx;
-  background-color: #d8d8d8;
-  margin: 2rpx 20rpx 10rpx 20rpx;
-  padding: 2rpx 10rpx 2rpx 10rpx;
+  background-color: #fafafa;
+  margin: 8rpx 10rpx 8rpx 10rpx;
+  padding: 2rpx 16rpx 2rpx 16rpx;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 28rpx;
   color: #3f3f3f;
+  box-shadow: 3rpx 3rpx 2rpx 2rpx #d6d6d6;
 }
 
 .postingBtnContainer {
   margin: 10rpx;
 }
 
-.ongoingOrderItemContainer{
+.ongoingOrderItemContainer {
   width: 78%;
   height: 180rpx;
+  display: flex;
+  align-items: center;
 }
 
-.ongoingOrderStatusContainer{
+.ongoingOrderStatusContainer {
   width: 18%;
   height: 180rpx;
 }
-.ongoingOrderStatus{
+
+.ongoingOrderStatus {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 90%;
   height: 100%;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   margin: 10rpx 20rpx 10rpx 10rpx;
 }
-.ongoingOrderStatusIcon{
+
+.ongoingOrderStatusIcon {
   width: 81rpx;
   height: 81rpx;
   margin: 20rpx 5rpx 20rpx 5rpx;
 }
-.ongoingOrderStatusText{
+
+.ongoingOrderStatusText {
   font-size: 24rpx;
   margin: 5rpx 5rpx 10rpx 5rpx;
 }
