--- a/miniprogram/components/extend_btn/index.wxss
+++ b/miniprogram/components/extend_btn/index.wxss
@@ -1,13 +1,15 @@
 /* components/extend_btn/index.wxss */
 
 .btn{
-  width: 320rpx;
+  width: 90%;
+  max-width: 320rpx;
   border-radius: 32rpx;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
+  /* align-items: center; */
   background-color: #284a7e;
-  padding: 10rpx 5rpx 10rpx 5rpx;
+  padding: 20rpx 20rpx 20rpx 10rpx;
   box-shadow: 4rpx 2rpx 5rpx 1rpx #d8d8d8;
 }
 
@@ -21,7 +23,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  margin: 10rpx 20rpx 5rpx 20rpx;
+  margin: 10rpx 20rpx 5rpx 10rpx;
 }
 
 .btnIconContainer{
@@ -40,7 +42,7 @@
 .btnTitle{
   font-size: 46rpx;
   font-weight: 600;
-  color: aliceblue;
+  color: #ffffff;
   margin: 2rpx;
 }
 
@@ -49,5 +51,5 @@
   min-width: 160rpx;
   font-size: 24rpx;
   margin: 5rpx 10rpx 20rpx 20rpx;
-  color: #757575;
+  color: #dadada;
 }
