--- a/miniprogram/components/item_card/index.wxss
+++ b/miniprogram/components/item_card/index.wxss
@@ -74,7 +74,7 @@
   height: 54rpx;
   margin: 2rpx;
   border-radius: 64rpx;
-  background-color: grey;
+  background-color: #e2e2e2;
 }
 
 .cardIdentity .cardNickname {
