--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -18,7 +18,7 @@ page {
 .searchArea {
   width: 700rpx;
   background-color: #f5f5f5;
-  margin: 20rpx 10rpx;
+  margin: 20rpx 10rpx 10rpx 10rpx;
   border-radius: 20rpx;
   justify-content: center;
   height: fit-content;
@@ -29,7 +29,7 @@ page {
 .postingArea {
   width: 700rpx;
   background-color: #f5f5f5;
-  margin: 10rpx 10rpx;
+  margin: 10rpx;
   padding: 20rpx 5rpx 20rpx 5rpx;
   border-radius: 20rpx;
   justify-content: center;
@@ -41,7 +41,7 @@ page {
 .ongoingOrderArea {
   width: 700rpx;
   background-color: #f5f5f5;
-  margin: 20rpx 10rpx;
+  margin: 10rpx 10rpx;
   border-radius: 20rpx;
   justify-content: center;
   align-items: center;
@@ -55,7 +55,7 @@ page {
   flex-wrap: wrap;
   width: 720rpx;
   background-color: #f5f5f5;
-  margin: 20rpx 10rpx;
+  margin: 10rpx 10rpx;
   border-radius: 20rpx;
   justify-content: center;
   height: 680rpx;
@@ -121,7 +121,7 @@ page {
 }
 
 .postingBtnContainer {
-  margin: 10rpx;
+  margin: 8rpx;
 }
 
 .ongoingOrderItemContainer {
@@ -132,6 +132,8 @@ page {
 }
 
 .ongoingOrderStatusContainer {
+  display: flex;
+  align-items: center;
   width: 18%;
   height: 180rpx;
 }
@@ -140,19 +142,23 @@ page {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 90%;
-  height: 100%;
-  /* background-color: #ffffff; */
-  margin: 10rpx 20rpx 10rpx 10rpx;
+  height: 80%;
+  background-color: #ffffff;
+  border-radius: 10rpx;
+  margin: 2rpx 2rpx 2rpx 5rpx;
 }
 
 .ongoingOrderStatusIcon {
-  width: 81rpx;
-  height: 81rpx;
-  margin: 20rpx 5rpx 20rpx 5rpx;
+  display: flex;
+  width: 48rpx;
+  height: 48rpx;
+  margin: 10rpx;
 }
 
 .ongoingOrderStatusText {
-  font-size: 24rpx;
+  display: flex;
+  font-size: 28rpx;
   margin: 5rpx 5rpx 10rpx 5rpx;
 }
